syntax = "proto3";
package elysnetwork.elys.oracle;

import "gogoproto/gogo.proto";
import "elys/oracle/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/elys-network/elys/x/oracle/types";

// GenesisState defines the oracle module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  string port_id = 2;
  // this line is used by starport scaffolding # genesis/proto/state
}
