syntax = "proto3";
package elys.oracle;

import "cosmos_proto/cosmos.proto";

option go_package = "github.com/elys-network/elys/x/oracle/types";

message PriceFeeder {
  string feeder = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  bool is_active = 2;
}
